[gd_scene load_steps=51 format=2]

[ext_resource path="res://player/player_new.gd" type="Script" id=2]
[ext_resource path="res://player/shader_test.png" type="Texture" id=3]
[ext_resource path="res://player/super_star.shader" type="Shader" id=4]
[ext_resource path="res://art_old/mario/mario.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=61]
shader = ExtResource( 4 )
shader_param/new_overalls = Color( 1, 0.192157, 0.0941176, 1 )
shader_param/new_shirt = Color( 0.776471, 0.388235, 0, 1 )
shader_param/new_skin = Color( 1, 0.580392, 0.352941, 1 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 16, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 48, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 80, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 3 )
region = Rect2( 112, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 3 )
region = Rect2( 16, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 3 )
region = Rect2( 48, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 3 )
region = Rect2( 80, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 3 )
region = Rect2( 112, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "big",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "small",
"speed": 5.0
} ]

[sub_resource type="Animation" id=33]

[sub_resource type="Animation" id=34]
resource_name = "fire_flower"

[sub_resource type="Animation" id=35]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=37]
resource_name = "mushroom"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 13, 14, 13, 14, 15, 13, 15, 15 ]
}

[sub_resource type="Animation" id=93]
resource_name = "run"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 4 ]
}

[sub_resource type="Animation" id=38]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 11, 12, 12 ]
}

[sub_resource type="Animation" id=39]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8, 12, 12 ]
}

[sub_resource type="Animation" id=40]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=41]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 4 ]
}

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 24, 28 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 10, 2 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 24, 4 )

[sub_resource type="Animation" id=63]
resource_name = "default"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/new_overalls")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.192157, 0.0941176, 1 ), Color( 0.111919, 0.402344, 0.0612946, 1 ), Color( 1, 0.192157, 0.0941176, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 0.192157, 0.0941176, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/new_shirt")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.776471, 0.388235, 0, 1 ), Color( 1, 0.580392, 0.352941, 1 ), Color( 1, 0.580392, 0.352941, 1 ), Color( 0.666667, 0.266667, 0, 1 ), Color( 0.776471, 0.388235, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:material:shader_param/new_skin")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.580392, 0.352941, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.805, 0.7, 1 ), Color( 1, 0.580392, 0.352941, 1 ) ]
}

[sub_resource type="Animation" id=94]
resource_name = "fire_flower"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/new_overalls")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.580392, 0.352941, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0.686275, 0.12549, 1 ), Color( 1, 0.192157, 0.0941176, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/new_shirt")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.192157, 0.0941176, 1 ), Color( 1, 0.192157, 0.0941176, 1 ), Color( 0.776471, 0.388235, 0, 1 ), Color( 1, 0.192157, 0.0941176, 1 ), Color( 1, 0.580392, 0.352941, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:material:shader_param/new_skin")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.580392, 0.352941, 1 ), Color( 1, 1, 1, 1 ), Color( 0.875, 0.73536, 0.659668, 1 ), Color( 1, 0.580392, 0.352941, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Object",
"Player",
]]
pause_mode = 2
collision_mask = 2
script = ExtResource( 2 )
health = null
state_powerup = null
speed = null
gravity = null
jump_force = null
acceleration = null
friction = null

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = -2147483647
material = SubResource( 61 )
position = Vector2( 0, -32 )
scale = Vector2( 4, 4 )
frames = SubResource( 32 )
animation = "small"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 33 )
anims/fire_flower = SubResource( 34 )
anims/idle = SubResource( 35 )
anims/jump = SubResource( 36 )
anims/mushroom = SubResource( 37 )
anims/run = SubResource( 93 )
anims/swim_down = SubResource( 38 )
anims/swim_up = SubResource( 39 )
anims/turn = SubResource( 40 )
anims/walk = SubResource( 41 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -32 )
shape = SubResource( 42 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -16.0
margin_top = -136.0
margin_right = 24.0
margin_bottom = -96.0
color = Color( 1, 0.282353, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetectorHead" type="Area2D" parent="."]
visible = false
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -2, -62 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectorHead"]
shape = SubResource( 43 )

[node name="DetectorFeet" type="Area2D" parent="."]
visible = false
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 0, -4 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFeet"]
shape = SubResource( 44 )

[node name="SuperStar" type="AnimationPlayer" parent="."]
anims/default = SubResource( 63 )
anims/fire_flower = SubResource( 94 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 65.8002, -34.1022 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
